{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 41,
  "lineage": "0f3e7b73-80bd-9624-dbee-33cc9aad56cd",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "managed_node",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bd01824d64912730",
            "arn": "arn:aws:ec2:us-east-1:637423597187:instance/i-054c539efba587fd8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054c539efba587fd8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0472c896c1c5713ac",
            "private_dns": "ip-10-0-1-172.ec2.internal",
            "private_ip": "10.0.1.172",
            "public_dns": "ec2-34-228-239-219.compute-1.amazonaws.com",
            "public_ip": "34.228.239.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01a56168ea94d2560",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a990d5bb89a95af",
            "tags": {
              "Name": "host_node_0"
            },
            "tags_all": {
              "Name": "host_node_0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c0f2da3c31a1ce0b"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.compute.aws_key_pair.aws-key",
            "module.compute.data.aws_ssm_parameter.webserver-ami",
            "module.vpc.aws_security_group.ansible_public_sg",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bd01824d64912730",
            "arn": "arn:aws:ec2:us-east-1:637423597187:instance/i-094e9c8baa51fec39",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094e9c8baa51fec39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0df4449fb3471ca4c",
            "private_dns": "ip-10-0-1-85.ec2.internal",
            "private_ip": "10.0.1.85",
            "public_dns": "ec2-34-229-211-47.compute-1.amazonaws.com",
            "public_ip": "34.229.211.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06320d877846219e7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a990d5bb89a95af",
            "tags": {
              "Name": "host_node_1"
            },
            "tags_all": {
              "Name": "host_node_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c0f2da3c31a1ce0b"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.compute.aws_key_pair.aws-key",
            "module.compute.data.aws_ssm_parameter.webserver-ami",
            "module.vpc.aws_security_group.ansible_public_sg",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bd01824d64912730",
            "arn": "arn:aws:ec2:us-east-1:637423597187:instance/i-0ead2b4e3988d5f11",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ead2b4e3988d5f11",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f0fe5697c9603138",
            "private_dns": "ip-10-0-1-35.ec2.internal",
            "private_ip": "10.0.1.35",
            "public_dns": "ec2-54-211-48-21.compute-1.amazonaws.com",
            "public_ip": "54.211.48.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ea246e00f2b634fd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a990d5bb89a95af",
            "tags": {
              "Name": "host_node_2"
            },
            "tags_all": {
              "Name": "host_node_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c0f2da3c31a1ce0b"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.compute.aws_key_pair.aws-key",
            "module.compute.data.aws_ssm_parameter.webserver-ami",
            "module.vpc.aws_security_group.ansible_public_sg",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bd01824d64912730",
            "arn": "arn:aws:ec2:us-east-1:637423597187:instance/i-0dc7145682845eada",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc7145682845eada",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a875d4df61c3f08f",
            "private_dns": "ip-10-0-1-114.ec2.internal",
            "private_ip": "10.0.1.114",
            "public_dns": "ec2-52-91-208-103.compute-1.amazonaws.com",
            "public_ip": "52.91.208.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0acd7a6d1af24dbf5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a990d5bb89a95af",
            "tags": {
              "Name": "host_node_3"
            },
            "tags_all": {
              "Name": "host_node_3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c0f2da3c31a1ce0b"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.compute.aws_key_pair.aws-key",
            "module.compute.data.aws_ssm_parameter.webserver-ami",
            "module.vpc.aws_security_group.ansible_public_sg",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ansible_igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423597187:internet-gateway/igw-03ae1c88dd13e3367",
            "id": "igw-03ae1c88dd13e3367",
            "owner_id": "637423597187",
            "tags": {
              "Name": "Ansible-Sandbox-Gateway"
            },
            "tags_all": {
              "Name": "Ansible-Sandbox-Gateway"
            },
            "vpc_id": "vpc-009292286cf297481"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ansible_public_route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423597187:route-table/rtb-09156404f081a149a",
            "id": "rtb-09156404f081a149a",
            "owner_id": "637423597187",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ae1c88dd13e3367",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Ansible-Sandbox-RouteTable"
            },
            "tags_all": {
              "Name": "Ansible-Sandbox-RouteTable"
            },
            "vpc_id": "vpc-009292286cf297481"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.ansible_igw",
            "module.vpc.aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ansible_public_assoc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ed9d8e12a545fa7",
            "route_table_id": "rtb-09156404f081a149a",
            "subnet_id": "subnet-00a990d5bb89a95af"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.ansible_igw",
            "module.vpc.aws_route_table.ansible_public_route",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible_public_sg",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423597187:security-group/sg-0c0f2da3c31a1ce0b",
            "description": "Used for access to the public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0f2da3c31a1ce0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from TCP/1233",
                "from_port": 1233,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1233
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from TCP/80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from TCP/8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ansible_public_sg",
            "name_prefix": "",
            "owner_id": "637423597187",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ansible-SecurityGroup"
            },
            "tags_all": {
              "Name": "Ansible-SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-009292286cf297481"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ansible_public_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423597187:subnet/subnet-00a990d5bb89a95af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00a990d5bb89a95af",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423597187",
            "tags": {
              "Name": "Ansible-Sandbox-Subnet"
            },
            "tags_all": {
              "Name": "Ansible-Sandbox-Subnet"
            },
            "vpc_id": "vpc-009292286cf297481"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ansible_vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423597187:vpc/vpc-009292286cf297481",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d594c8d291c23b3c",
            "default_route_table_id": "rtb-0e0eec9ccb1b05e4e",
            "default_security_group_id": "sg-068e6377b2926d167",
            "dhcp_options_id": "dopt-002590128216042a5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-009292286cf297481",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e0eec9ccb1b05e4e",
            "owner_id": "637423597187",
            "tags": {
              "Name": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "Terraform-VPC"
            }
          }
        }
      ]
    }
  ]
}